--- a/src/app/note-form/note-form.component.html
+++ b/src/app/note-form/note-form.component.html
@@ -1,28 +1,32 @@
 <!-- New note -->
-<h2 class="display-2 my-3">New/edit note</h2>
+<div class="container">
+  <h2 class="display-2 my-3">New/edit note</h2>
 
-<form action="" novalidate>
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input
-      type="text"
-      class="form-control is-invalid"
-      id="title"
-      placeholder="Title"
-      required
-    />
-    <div class="invalid-feedback">Please provide a title!</div>
-  </div>
-  <div class="form-group">
-    <label for="text">Text</label>
-    <textarea
-      class="form-control"
-      id="text"
-      rows="5"
-      required
-    ></textarea>
-    <div class="invalid-feedback">Please provide a description!</div>
-  </div>
+  <form action="" novalidate>
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        id="title"
+        placeholder="Title"
+        required
+      />
+      <div class="invalid-feedback">Please provide a title!</div>
+    </div>
+    <div class="form-group">
+      <label for="text">Text</label>
+      <textarea
+        class="form-control"
+        id="text"
+        rows="5"
+        required
+      ></textarea>
+      <div class="invalid-feedback">Please provide a description!</div>
+    </div>
+  
+    <button type="submit" class="btn btn-primary">Create</button>
+  </form>
+</div>
 
-  <button type="submit" class="btn btn-primary">Create</button>
-</form>
+<div>{{noteService.getSelectedNote() | json}}</div>
