--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
   <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/notes" (click)="isMenuCollapsed = true">Notes</a>
+        <a class="nav-link" routerLink="/notes" (click)="isMenuCollapsed = true;">Notes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about" (click)="isMenuCollapsed = true">About</a>
