--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -1,28 +1,29 @@
-<div class="container">
+<div class="container mb-5">
   <h2 class="display-2 my-3">Diary</h2>
   <p><a class="btn btn-primary" routerLink="/notes/new" role="button">New diary entry</a></p>
   <div class="list-group">
-    <a
-      *ngFor="let note of notes"
-      routerLink="/notes/edit"
+    <div
+      *ngFor="let note of notes"   
       class="list-group-item list-group-item-action list-group-item-primary"
-      (click) = "noteService.setSelectedNote(note)"
       >
       <div class="d-flex w-100 justify-content-between align-items-center">
         <h5 class="mb-1">{{note.title}}</h5>
-        <span class="badge badge-danger">EDIT</span>
+        <a 
+          (click) = "noteService.setSelectedNote(note);"
+          [routerLink]="['/notes/', note.id, 'edit']"
+          >
+          <span class="badge badge-danger">EDIT</span>
+        </a>
+        
       </div>
       <p id="text" class="mb-1">
         {{note.text}}
-        {{noteService.getSelectedNote() | json}}
       </p>
       <small>
-        <i class="fas fa-map-marker-alt"></i> PC1
-        <i class="fas fa-calendar-alt"></i> 2019.01.01.
+        <i class="fas fa-calendar-alt"></i>Created at: {{note.created_at.substring(0, 10)}}
         <i class="fas fa-comment"></i>
-        <span class="badge badge-light badge-pill">3</span>
       </small>
-    </a>
+    </div>
 
   </div>
 </div>
